--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ SECRET_KEY=change-me-in-local
 ACCESS_TOKEN_EXPIRE_MINUTES=120
 DATABASE_URL=postgresql+psycopg2://roadmap:roadmap@localhost:5432/roadmap_agent
 FILE_STORAGE_PATH=storage/uploads
-CORS_ORIGINS=http://localhost:3000,http://localhost:5173,http://127.0.0.1:5173,http://localhost:8000
+CORS_ORIGINS=http://localhost:3000,http://localhost:5173,http://127.0.0.1:5173,http://[::1]:5173,http://localhost:8000
 GOOGLE_GENAI_USE_VERTEXAI=True
 GOOGLE_CLOUD_PROJECT=z-agent-dev
 GOOGLE_CLOUD_LOCATION=us-central1
