Add admin RBAC and PDF governance document exports

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ GOOGLE_GENAI_USE_VERTEXAI=True
 GOOGLE_CLOUD_PROJECT=z-agent-dev
 GOOGLE_CLOUD_LOCATION=us-central1
 GOOGLE_APPLICATION_CREDENTIALS=/path/to/service-account.json
+ADMIN_BOOTSTRAP_NAME=Platform Admin
+ADMIN_BOOTSTRAP_EMAIL=admin@company.com
+ADMIN_BOOTSTRAP_PASSWORD=change-me-strong-password
